2003-06-11  Kenneth Rohde Christiansen  <kenneth@gnu.org>

	* configure.in: Added "li" to ALL_LINGUAS.

2003-05-29  Paul Duffy <dubhthach@frink.nuigalway.ie>

         * configure.in: Added "ga" to ALL_LINGUAS.

2003-05-06  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "hi" to ALL_LINGUAS.

2003-05-06  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-05-04  Taneem Ahmed  <taneem@eyetap.org>

	* configure.in: Added "bn" in ALL_LINGUAS

2003-03-25  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in: release 2.3.0

2003-03-21  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" to ALL_LINGUAS.

2003-02-24  Roozbeh Pournader  <roozbeh@sharif.edu>

	* configure.in: Added "fa" to ALL_LINGUAS.

2003-02-10  Mohammad DAMT  <mdamt@bisnisweb.com>

	* po/id.po: Added Indonesian translation
	* configure.in: Added "id" to ALL_LINGUAS

2003-01-23  Christian Rose  <menthos@menthos.com>

	* help/C/Makefile.am: Reverted. Somehow my last commit
	replaced its contents with a PNG file. No idea how that
	happened. Sorry all.

2003-01-22  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "mn" to ALL_LINGUAS.

2003-01-12  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in: add startup notify support. Release 2.0.4

2003-01-08  Pauli Virtanen  <pauli.virtanen@hut.fi>

	* configure.in: added "fi" (Finnish) to ALL_LINGUAS.

2002-11-25  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in, gnome-system-monitor.spec: release 2.0.3

2002-11-22 John Fleck <jfleck@inkstain.net>

	* help/C/gnome-system-monitor.xml
	* help/C/figures/memoryMaps.png, moreInfo.png,
	pocessListing.png, systemMonitor.png
	checking in new help docs from Bill Day
	(Thanks, Bill!)

2002-11-09  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS

2002-09-26  Stanislav Brabec  <sbrabec@suse.cz>

	* configure.in: Added cs to ALL_LINGUAS.
