@@ -1,10 +1,14 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=System Monitor
 _Comment=View current processes and monitor system state
 TryExec=gnome-system-monitor
 Exec=gnome-system-monitor
 Icon=procman.png
-Terminal=0
+Terminal=false
 Type=Application
 StartupNotify=true
 Categories=Application;System;
+X-GNOME-Bugzilla-Bugzilla=GNOME
+X-GNOME-Bugzilla-Product=system-monitor
+X-GNOME-Bugzilla-Component=general
