@@ -1,3 +1,8 @@
+2003-07-02  Jordi Mallach  <jordi@sindominio.net>
+
+	* gnome-system-monitor.desktop.in: Add Encoding and X-GNOME-Bugzilla
+	entries, and fix Terminal.
+
 2003-06-11  Kenneth Rohde Christiansen  <kenneth@gnu.org>
 
 	* configure.in: Added "li" to ALL_LINGUAS.
